==============
Change History
==============

2011/11/29 0.3.1
================

 - added missing README to distro

2011/11/29 0.3.0
================

 - allow to set a snapshot directory in workdirectory-layer - this
   allows for generating non-temporary snapshots.

 - moved wait implementation for server start in server-layer into
   start, this is usefull when calling start and stop in tests, but
   might introduce incompatibilities when subclassed.

 - moved to github

 - postgresql 8.4 compat

2011/05/18 0.2.3
================

 - also dump routines for mysql

2011/05/11 0.2.2
================

 - try to run commands from the scripts dir (mysql 5.5)

2011/05/10 0.2.1
================

 - fixed the mysqld_path to work with newer mysql version

2011/01/07 0.2.0
================

 - fixed an UnboundLocalError in server layer

 - do not use shell option in server layer command and sanitize the
   command options.

 - reduced start/stop wait times in mysql layer

 - use modification times in layer sql script change checking
   additionally to the paths. this way the test dump is only used if
   the sql scripts have not been modified since the last test run.

 - stop sql servers when runscripts fails in layer setup because
   otherwise the server still runs after the testrunner exited.

 - allow to define a defaults file in mysql layer

 - fixed cassandra layer download url

 - removed dependency to ``zc.buildout`` which is now in an extra
   called ``cassandra`` because it is only needed for downloading
   cassandra.

 - removed dependency to ``zope.testing``

 - removed dependency to ``transaction``

 - do not pipe stderr in base server layer to prevent overflow because
   it never gets read

2010/10/22 0.1.2
================

 - look form mysqld in relative libexec dir in mysql layer

2010/10/22 0.1.1
================

 - allow setting the mysql_bin_dir in layer and server

2010/07/14 0.1.0
================

 - fix wait interval in isUp check in server layer
