@@ -52,6 +52,7 @@ def test_suite():
     suites = (
         create_suite('layer.txt', setUp=cleanWorkDirs),
         create_suite('memcached.txt'),
+        create_suite('server.txt'),
         # the cassandra test needs an internet connection for downloading cassandra
         create_suite('cass.txt', level=3),
         create_suite('pgsql.txt'),
