@@ -2,6 +2,11 @@
 Change History
 ==============
 
+unreleased
+==========
+
+ - fixed #1 an endless loop in server layer
+
 2011/11/29 0.3.1
 ================
 
